[fix] dark mode modal mask bg

--- a/packages/app/styles/preset/antd.less
+++ b/packages/app/styles/preset/antd.less
@@ -52,7 +52,7 @@
 // Modal
 [data-theme='dark'] {
 	.xgen-modal-mask {
-		background-color: rgba(255, 255, 255, 0.09);
+		background-color: rgba(0, 0, 0, 0.6);
 	}
 
 	.custom_modal {
